--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,123 +1,164 @@
 body {
-    background-color: #2b2b2b;
     margin-bottom: 60px;
 }
+
 p {
-    color: #aaaaaa;
-    font-family: Monaco;
+    font-family: Monaco, sans-serif;
     font-size: 0.9em;
-    margin: 20px 100px;
+    margin: 20px 0;
     line-height: 1.5em;
-    text-align: justify;
-    max-width: 800px;
+    text-align: left;
 }
-strong, b {
-    color: #cca76e;
-}
-em, i {
-    color: #dddddd;
-}
+
 a, a:link, a:visited {
-    font-family: Monaco;
-    color: #8888c6;
+    font-family: Monaco, sans-serif;
     cursor: pointer;
     text-decoration: underline;
 }
+
 a:active, a:hover {
     text-decoration: none;
 }
+
 nav {
     margin: 20px 0;
     padding: 10px 60px;
-    border-top: 1px solid #000;
-    border-bottom: 1px solid #000;
-    background-color: #252525;
 }
-nav a, nav a:link, nav a:active, nav a:visited {
-    color: #aaaaaa;
+
+nav a, nav a:link, nav a:active, nav a:visited,
+.toggle a, .toggle a:link, .toggle a:active, .toggle a:visited {
     margin-right: 30px;
     text-decoration: none;
+    text-transform: uppercase;
 }
-nav a:hover {
-    color: #eeeeee;
+
+nav a:hover,
+.toggle a:hover {
     text-decoration: none;
 }
+
 h1, h2, h3, h4, h5 {
-    margin: 40px 100px;
-    font-family: Monaco;
-    color: #eeeeee;
+    margin: 20px 0;
+    font-family: Monaco, sans-serif;
+    line-height: 1.55em;
 }
+
 h1 {
-    margin: 40px 60px;
     font-size: 2em;
-    color: #cca76e;
 }
+
 h2 {
     font-size: 1.8em;
 }
+
 h3 {
     font-size: 1.6em;
 }
+
 h4 {
     font-size: 1.4em;
 }
+
 h5 {
     font-size: 1.2em;
 }
+
 header h1 {
-    font-size: 2.5em;
-    color: #dddddd;
+    font-size: 3em;
     margin: 40px 60px;
-    font-family: Arial;
+    white-space: nowrap;
 }
+
+header h1 a:link, header h1 a:active, header h1 a:visited, header h1 a:hover {
+    font-family: Arial, sans-serif;
+    text-decoration: none;
+}
+
+h1.heading {
+    margin: 40px 0 20px;
+    font-size: 2em;
+}
+
 blockquote {
-    margin: 30px 100px 0;
-    background-color: #252525;
-    border: 1px solid #000;
+    margin: 40px 0;
     padding: 20px;
-    max-width: 760px;
+    width: 768px;
 }
+
 blockquote p {
-    color: #6a8759;
-    font-size: .8em;
-    font-family: Monaco;
-    margin: 0;
+    font-size: 1em;
+    font-family: Monaco, sans-serif;
+    margin: 0 0 1.4em;
 }
+
 blockquote cite {
     font-style: italic;
     display: block;
     text-align: right;
-    width: 96%;
-    margin-top: 10px;
-    color: #cca76e;
+    width: 98%;
     font-weight: bold;
+    font-size: 1.1em;
 }
+
 blockquote cite:before {
-    content: "~";
+    content: "~ ";
+    font-weight: bold;
+    font-size: 1.1em;
 }
-input {
-    margin: 20px 0px;
+
+section {
+    margin: 0 0 100px 60px;
 }
+
+section ul {
+    margin: 0 0 20px 0;
+}
+
+section ol {
+    margin: 0 0 20px 10px;
+}
+
+section li {
+    font-family: Monaco, sans-serif;
+    font-size: 1em;
+    margin: 3px 20px;
+}
+
 footer {
-    background-color: #252525;
-    margin: 20px 0 0 0;
-    border-top: 1px solid #000;
     position: fixed;
     width: 100%;
+    height: 40px;
     bottom: 0;
 }
+
 footer p {
-    color: #777777;
-    font-family: Monaco;
+    font-family: Monaco, sans-serif;
     font-size: .9em;
-    margin: 10px 100px;
+    margin: 10px 60px;
 }
+
 .right {
     float: right;
 }
+
 .left {
     float: left;
 }
+
 .clear {
     clear: both;
+    display: block;
+}
+
+.hidden {
+    display: none;
+}
+
+h2.highlight {
+    margin-bottom: 20px;
+}
+
+.toggle {
+    float: right;
+    margin: -76px 60px 0 0;
 }
